# codes_waveshare_rp2350_pizero

./: README.md
01_Proyecto/: 01_Proyecto.c  CMakeLists.txt
02_Proyecto/: 02_Proyecto.c  CMakeLists.txt
03_Proyecto/: 03_Proyecto.c  CMakeLists.txt
04_Proyecto/: 04_Proyecto.c  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
04_Proyecto/libdvi/: cmake_install.cmake
05_Proyecto/: 05_Proyecto.c  CMakeLists.txt
05_Proyecto/include/: common_dvi_pin_configs.h
05_Proyecto/libdvi/: dvi_serialiser.pio
06_Proyecto/: 06_Proyecto.c  CMakeLists.txt
06_Proyecto/include/: common_dvi_pin_configs.h
06_Proyecto/libdvi/: dvi_serialiser.pio
07_Proyecto_pico_pio_usb/: 07_Proyecto_pico_pio_usb.c  CMakeLists.txt  tusb_config.h
07_Proyecto_pico_pio_usb/Pico-PIO-USB/: README.md
07_Proyecto_pico_pio_usb/Pico-PIO-USB/examples/: CMakeLists.txt
07_Proyecto_pico_pio_usb/Pico-PIO-USB/examples/test_ll/: CMakeLists.txt  test_ll.c
07_Proyecto_pico_pio_usb/Pico-PIO-USB/examples/usb_device/: usb_device.c
07_Proyecto_pico_pio_usb/Pico-PIO-USB/src/: pio_usb.c  pio_usb.h  pio_usb_configuration.h  pio_usb_device.c  pio_usb_host.c  pio_usb_ll.h  sdk_compat.h  usb_crc.c  usb_crc.h  usb_definitions.h  usb_rx.pio  usb_tx.pio
08_Proyecto_PICO-PIO-USB/: 08_Proyecto_PICO-PIO-USB.c  CMakeLists.txt
C/01-DVI/: CMakeLists.txt
C/01-DVI/apps/gui_demo/: main.c
C/01-DVI/apps/hello_dvi/: main.c
C/02-USB/examples/: CMakeLists.txt
PicoDVI/software/: CMakeLists.txt
PicoDVI/software/apps/: CMakeLists.txt
PicoDVI/software/apps/bad_apple/: CMakeLists.txt  main.c
PicoDVI/software/apps/christmas_snowflakes/: CMakeLists.txt  main.c
PicoDVI/software/apps/colour_terminal/: CMakeLists.txt  main.c
PicoDVI/software/apps/dht_logging/: CMakeLists.txt  main.c
PicoDVI/software/apps/dual_display/: CMakeLists.txt  main.c
PicoDVI/software/apps/hello_dvi/: CMakeLists.txt  main.c
PicoDVI/software/apps/mandel-full/: CMakeLists.txt  main.c
PicoDVI/software/apps/mandelbrot/: CMakeLists.txt  main.c
PicoDVI/software/apps/moon/: CMakeLists.txt  main.c
PicoDVI/software/apps/sprite_bounce/: CMakeLists.txt  main.c
PicoDVI/software/apps/terminal/: CMakeLists.txt  main.c
PicoDVI/software/apps/tiles/: CMakeLists.txt  main.c
PicoDVI/software/apps/tiles_and_sprites/: CMakeLists.txt  main.c
PicoDVI/software/apps/tiles_parallax/: CMakeLists.txt  main.c
PicoDVI/software/apps/vista/: CMakeLists.txt  main.c
PicoDVI/software/apps/vista-palette/: CMakeLists.txt  main.c
PicoDVI/software/libdvi/: CMakeLists.txt  dvi_serialiser.pio
